fixed an error that the description was not showing up on the project overview page.

--- a/ckanext/cadasta/fanstatic/customCSS.css
+++ b/ckanext/cadasta/fanstatic/customCSS.css
@@ -340,6 +340,10 @@ li {
 
 }
 
+#project-desc .description {
+    margin-left: 20px;
+}
+
 /* RW - removed fixed height so activity feed will push down without an internal scrollbar */
 #project-activity-summary {
     width:510px;
